--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p style="color: white;">{{ predicted_dis }}</p>
+            <p style="color: black;">{{ predicted_dis }}</p>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p style="color: white;">{{ disease_desc }}</p>
+            <p style="color: black;">{{ disease_desc }}</p>
           </div>
         </div>
       </div>
