--- a/static/styles.css
+++ b/static/styles.css
@@ -14,7 +14,7 @@
     border-radius: 25px;
   }
   .footer {
-    background-color: #301934;
+    background-color: #000720;
     color: white;
     text-align: center;
     padding: 10px;
@@ -24,7 +24,7 @@
     margin: 0;
     font-size: 20px;
     font-weight: bolder;
-    color: #000000;
+    color: white;
   }
   
   /* New CSS */
@@ -35,13 +35,13 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url("../static/124850.jpg");
+    background-image: url("../static/1349907.jpeg");
     background-size: cover;
     background-position: center;
     opacity: 0.5;
   }
   
   .text-white-list {
-    color: white;
+    color: black;
   }
   
