--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,34 @@
       </div>
     </div>
 
+    <!-- Error Modal -->
+    {% if invalid_symptoms %}
+    <div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header" style="background-color: #ff0000; color: white;">
+            <h5 class="modal-title" id="errorModalLabel">Invalid Symptoms</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p style="color: black;">The following symptoms are not recognized:</p>
+            <ul>
+              {% for sym in invalid_symptoms %}
+                <li>{{ sym }}</li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        var errorModal = new bootstrap.Modal(document.getElementById('errorModal'));
+        errorModal.show();
+      });
+    </script>
+    {% endif %}
+
     <!-- Footer -->
     <div class="footer">
       <p>Note: SymptoFinder is not a replacement for a doctor. Users should seek medical advice from healthcare professionals if possible.</p>
