--- a/static/styles.css
+++ b/static/styles.css
@@ -1,47 +1,59 @@
 /* Existing CSS */
 .logo {
-    width: 50px;
-    height: 50px;
-    color: black;
-    margin-top: 0;
-    margin-left: 2;
-    margin-right: 2;
-  }
-  .myimage {
-    width: 50px;
-    height: 50px;
-    border: 2px solid black;
-    border-radius: 25px;
-  }
-  .footer {
-    background-color: #000720;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
-  }
-  .footer p {
-    margin: 0;
-    font-size: 20px;
-    font-weight: bolder;
-    color: white;
-  }
-  
-  /* New CSS */
-  .background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("../static/1349907.jpeg");
-    background-size: cover;
-    background-position: center;
-    opacity: 0.5;
-  }
-  
-  .text-white-list {
-    color: black;
-  }
-  
+  width: 50px;
+  height: 50px;
+  color: black;
+  margin-top: 0;
+  margin-left: 2;
+  margin-right: 2;
+}
+.myimage {
+  width: 50px;
+  height: 50px;
+  border: 2px solid black;
+  border-radius: 25px;
+}
+.footer {
+  background-color: #000720;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  margin-top: 20px;
+}
+.footer p {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bolder;
+  color: white;
+}
+
+/* New CSS */
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("../static/1349907.jpeg");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.5;
+}
+
+.background-image-about {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("../static/1353378.jpeg");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.5; /* Adjust the opacity as needed */
+}
+
+.text-white-list {
+  color: black;
+}
