--- a/templates/about.html
+++ b/templates/about.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet"> <!-- External CSS -->
   </head>
-  <body style="background-color: #f8f9fa; font-family: Arial, sans-serif; line-height: 1.6;">
+  <body style="font-family: Arial, sans-serif; line-height: 1.6;">
+    <div class="background-image-about"></div> <!-- Fullscreen Background Image -->
+
     <div class="container my-4 mt-4">
       <h1 style="text-align: center; color: #000720; font-size: 2.5rem; margin-bottom: 1rem;">About SymptoFinder</h1>
       
