--- a/static/styles.css
+++ b/static/styles.css
@@ -48,7 +48,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url("../static/1253378.jpeg");
+  background-image: url("../static/1353378.jpeg");
   background-size: cover;
   background-position: center;
   opacity: 0.5;
@@ -61,7 +61,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url("../static/1330530.jpeg");
+  background-image: url("../static/1330530.png");
   background-size: cover;
   background-position: center;
   opacity: 0.5; /* Adjust the opacity as needed */
